<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:gravity="center"
    tools:context="comp3350.exampool.presentation.MultipleChoiceActivity">

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        >

        <TextView
            android:id="@+id/question"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems="12"
            android:enabled="true"
            android:text="Question:"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/createQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:enabled="true"
            android:layout_marginBottom="15dp"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems="12"
            android:enabled="true"
            android:text="Answer:"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/createAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:enabled="true"
            android:layout_marginBottom="15dp"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/option1"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems="12"
            android:enabled="true"
            android:text="Options:"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/createChoice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:enabled="true"
            android:layout_marginBottom="15dp"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/option2"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems="12"
            android:enabled="true"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/createChoice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:enabled="true"
            android:layout_marginBottom="15dp"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/option3"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:ems="12"
            android:enabled="true"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/createChoice3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:enabled="true"
            android:layout_marginBottom="15dp"
            android:inputType="textNoSuggestions" />

    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonNotesUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:onClick="buttonClearOnClick"
            android:text="Clear" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create"
            android:id="@+id/buttonNotesDelete"
            android:layout_alignParentRight="true"
            android:enabled="true"
            android:onClick="buttonCreateOnClick" />


    </RelativeLayout>

</LinearLayout>
