<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#031E33"
    android:gravity="center"
    android:visibility="visible"
    tools:visibility="visible"
    tools:context="comp3350.exampool.presentation.FlashcardsCreatePromptActivity">>

    <include layout="@layout/invalid_add"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="625dp"
        android:background="#031E33"
        android:gravity="center"
        android:orientation="vertical"
        android:saveEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/flashcardPrompt"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="What type of flashcard would you like to create?"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/buttonMultipleChoice"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:enabled="true"
            android:onClick="buttonMultipleChoiceOnClick"
            android:text="Multiple Choice Question"
            android:textSize="20dp" />

        <Button
            android:id="@+id/buttonTrueFalse"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:enabled="true"
            android:onClick="buttonTrueFalseOnClick"
            android:text="True or False Question"
            android:textSize="20dp" />

        <Button
            android:id="@+id/buttonTypedAnswer"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:enabled="true"
            android:onClick="buttonTypedAnswerOnClick"
            android:text="Typed Answer Question"
            android:textSize="20dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>