<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#031E33"
    android:gravity="center"
    android:visibility="visible"
    tools:context=".presentation.TrueFalseActivity"
    tools:visibility="visible">
    <include layout="@layout/invalid_add"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="625dp"
        android:background="#031E33"
        android:gravity="center"
        android:orientation="vertical"
        android:saveEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <EditText
            android:id="@+id/createQuestion"
            android:layout_width="277dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="67dp"
            android:layout_marginTop="77dp"
            android:layout_marginEnd="66dp"
            android:backgroundTint="@color/white"
            android:hint="Question?"
            android:textAlignment="center"
            android:textColor="#EDE7E7"
            android:textColorHint="#5ED3D3D3"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/flashcardPrompt"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="340dp"
            android:text="Is the answer true or false?"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="107dp"
            android:layout_marginBottom="231dp"
            android:layout_toStartOf="@+id/button6"
            android:backgroundTint="#9457eb"
            android:onClick="onTrueClick"
            android:text="TRUE"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="107dp"
            android:layout_marginBottom="231dp"
            android:backgroundTint="#9457EB"
            android:onClick="onFalseClick"
            android:text="FALSE"
            android:textColor="#FFFEFE" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:onClick="buttonClearOnClick"
            android:text="Clear"
            android:background="@drawable/custom_button"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:enabled="true"
            android:onClick="buttonCreateOnClick"
            android:text="Create"
            android:background="@drawable/custom_button"
            android:textColor="@color/white"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>